Decrease height, add padding Right padding will prevent comment  buttons and text from overlapping.

--- a/src/components/Post/post.module.css
+++ b/src/components/Post/post.module.css
@@ -118,7 +118,8 @@ hr {
   min-height: 80px;
   border-radius: 0 0 15px 15px;
   margin-bottom: 1px;
-  padding: 12px;
+  padding: 12px 40px 12px 12px;
+  min-height: 45px;
 }
 
 .submitCommentBtn {
